# askgql

./: Cargo.toml  LICENSE  README.md
src/: gpt.rs  gql.rs  json_to_schema.rs  lib.rs  main.rs
