[package]
name = "askgql"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
gptcl = { git = "https://github.com/carrotflakes/gptcl" }
gpt-model = { git = "https://github.com/carrotflakes/gptcl" }
gptcl-hyper = { git = "https://github.com/carrotflakes/gptcl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "askgql"
path = "src/main.rs"
