[package]
name = "askgql"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
gptcl = { git = "https://github.com/carrotflakes/gptcl", rev = "46f4cf081188d8caf00ab03bf0c928918e359d0c" }
gpt-model = { git = "https://github.com/carrotflakes/gptcl", rev = "46f4cf081188d8caf00ab03bf0c928918e359d0c" }
gptcl-hyper = { git = "https://github.com/carrotflakes/gptcl", rev = "46f4cf081188d8caf00ab03bf0c928918e359d0c" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "askgql"
path = "src/main.rs"
