[package]
name = "askgql"
description = "A CLI tool to interact with GraphQL APIs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/carrotflakes/askgql"
keywords = ["cli", "graphql", "gpt"]

[dependencies]
tokio = { version = "1", features = ["full"] }
gptcl = { git = "https://github.com/carrotflakes/gptcl", rev = "9d8f4b4a25456f1e1145420c15a87b779ce86191" }
gptcl-hyper = { git = "https://github.com/carrotflakes/gptcl", rev = "9d8f4b4a25456f1e1145420c15a87b779ce86191" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "askgql"
path = "src/main.rs"
